
 * Issue 129: added 3 new callbacks to FTPHandler class: 
   on_incomplete_file_sent(), on_incomplete_file_received() and on_login().

 * Issue 130: added UnixAuthorizer and WindowsAuthorizer classes defined in the
   new pyftpdlib.contrib.authorizers module.

 * Issue 131: pyftpdlib is now able to serve both IPv4 and IPv6 at the same
   time by using a single socket.

 * Issue 134: enabled TCP_NODELAY socket option for the FTP command channels
   resulting in pyftpdlib being twice faster.

 * Issue 135: Python 2.3 support has been removed.

Bugfixes:

 * Issue #120: an ActiveDTP() instance is not garbage collected in case a
   client issuing PORT disconnects before establishing the data connection.

 * Issue #122: a wrong variable name was used in AbstractedFS.validpath method.

 * Issue #123: PORT command doesn't bind to correct address in case an alias
   is created for the local network interface.

Major API changes since 0.5.2

 * removed support for Python 2.3.

 * all classes are now new-style classes

 * FTPHandler.use_gmt_times class attribute has been added.

 * FTPHandler.tcp_no_delay class attribute has been added.

 * FTPHandler.masquerade_address_map class attribute has been added.

 * FTPHandler.proto_cmds class attribute has been added.  The FTPHandler class 
   no longer relies on "ftpserver.proto_cmds" global dictionary but on
   "ftphandler.FTPHandler.proto_cmds" instead.

 * FTPHandler class has 3 new methods:
   on_incomplete_file_sent()
   on_incomplete_file_received()
   on_login()

 * Added a new package in pyftpdlib namespace: "contrib". Modules defined here:
   pyftpdlib.contrib.handlers.py
   pyftpdlib.contrib.authorizers.py

 * AbstractedFS class has 3 new methods: 
   get_user_by_uid()
   get_group_by_gid()
   readlink()

Minor API changes since 0.5.2

 * FTPHandler renamed objects:
   data_server -> _dtp_acceptor
   current_type -> _current_type
   restart_position -> _restart_position
   quit_pending -> _quit_pending
   af -> _af